[package]
name = "tldr-rs"
version = "0.1.0"
edition = "2021"
authors = ["fa_555 <fa_555@foxmail.com>"]
# repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
libc = "0.2.140"
reqwest = { version = "0.11.15", features = ["blocking"] }
zip = { version = "0.6.4", features = ["bzip2"] }
